fix: content jumping Refs: #39

--- a/src/page-content/learn/learn.module.scss
+++ b/src/page-content/learn/learn.module.scss
@@ -5,19 +5,26 @@
 
 .learnMore {
   position: relative;
-  padding-top: 16px;
 
-  @include breakpoint(lg) {
-    padding-top: 0px;
-    margin-top: -16px;
-  }
+  > section {
+    &:first-of-type .grid {
+      padding-top: 96px;
+      
+      @include breakpoint(lg) {
+        padding-top: 144px;
+      }
+    }
 
-  .grid {
-    row-gap: 48px;
-    margin-top: 80px;
-    
-    @include breakpoint(lg) {
-      margin-top: 160px;
+    &:not(:first-of-type) .grid {
+      margin-top: 80px;
+      
+      @include breakpoint(lg) {
+        margin-top: 160px;
+      }
+    }
+
+    .grid {
+      row-gap: 48px;
     }
   }
 
